tests/knowledge/context/aws/scenarios/cross_version/lambda-function/lambda-outbound-connections/main.tf
resource "aws_lambda_function" "my-lambda" {
  filename       = "lambda.zip"
  function_name = "my-lambda"
  role          = aws_iam_role.lambda-role.arn
  handler       = "lambda_function.lambda_handler"
  runtime = "python3.8"

  vpc_config {
    security_group_ids = [aws_security_group.allow-http.id, aws_security_group.allow-all-local.id]
    subnet_ids = [aws_subnet.private-subnet.id]
  }
}

resource "aws_iam_role_policy_attachment" "AWSLambdaVPCAccessExecutionRole" {
    role       = aws_iam_role.lambda-role.name
    policy_arn = "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
}

resource "aws_iam_role" "lambda-role" {
  name = "lambda-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "lambda.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
EOF
}

resource "aws_vpc" "main" {
  cidr_block = "192.168.100.0/24"
}


resource "aws_subnet" "private-subnet" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "192.168.100.128/25"
  availability_zone = "us-east-1a"

  tags = {
    Name = "private-subnet-test"
  }
}

resource "aws_security_group" "allow-http" {
  vpc_id     = aws_vpc.main.id
  description = "allow http"
  name = "security-group-allow-http"
  ingress {
    from_port = 80
    protocol = "TCP"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_subnet.private-subnet.cidr_block]
  }
}

resource "aws_security_group" "allow-all-local" {
  vpc_id     = aws_vpc.main.id
  description = "allow http"
  name = "security-group-allow-all-local"
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_subnet.private-subnet.cidr_block]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [aws_subnet.private-subnet.cidr_block]
  }
}

resource "aws_instance" "web-server" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"
  subnet_id = aws_subnet.private-subnet.id
  vpc_security_group_ids = [aws_security_group.allow-http.id]
  availability_zone = "us-east-1a"
  tags = {
    Name = "my-ec2-test"
  }
}

data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}
